mmap64 fixes for Apple/Xcode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,13 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 project(daisy)
 
 IF (UNIX OR APPLE)
+  include(CheckSymbolExists)
   check_symbol_exists(mmap64 "sys/mman.h" HAVE_MMAP64)
 ENDIF ()
 
-if(${HAVE_MMAP64})
+if(HAVE_MMAP64)
     message("System has large file support.")
-    add_definitions(-DHAVE_LARGE_FILE_SUPPORT)
+    add_definitions(-DHAVE_MMAP64)
 else()
     message("System hasn't large file support.")
 endif()
